--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,6 +1,9 @@
 name: CI
 
-on: [push]
+on:
+  push:
+    branches:
+      - master
 
 env:
   DEPLOY_PATH: /home/gtaserver/server/client_packages
@@ -17,7 +20,7 @@ jobs:
       # Устанавливаем Node.JS для сборки приложения
       - uses: actions/setup-node@v3.3.0
         with:
-          node-version: '16'
+          node-version: "16"
       # Устанавливаем зависимости для сборки
       - name: Install Dependencies
         run: npm i
