--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"version": "1.0.0",
 	"main": "index.js",
 	"scripts": {
-		"start": "npm run build",
+		"start": "npm i && npm run build",
 		"build": "webpack"
 	},
 	"dependencies": {
