--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,7 +6,7 @@ on:
       - master
 
 env:
-  DEPLOY_PATH: /home/${{ secrets.DEPLOY_SERVER_USERNAME }}/server/client_packages
+  DEPLOY_PATH: "/home/gtaserver/server/client_packages"
   # В теории можно собрать не только Vue-приложение, так как принцип сборки мало где отличается
   BUILD_SCRIPT: npm run start
   BUILD_SCRIPT_OUTPUT: build
