--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
 	},
 	"dependencies": {
 		"react": "^18.2.0",
-		"react-dom": "^18.2.0"
+		"react-dom": "^18.2.0",
+		"react-hook-form": "^7.33.1"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.18.6",
